--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(toolchain "C:/Program Files (x86)/GNU Arm Embedded Toolchain/bin")
 set(CMAKE_C_COMPILER ${toolchain}/arm-none-eabi-gcc.exe)
 set(CMAKE_ASM_COMPILER ${toolchain}/arm-none-eabi-as.exe)
 
-project(hello_arm C ASM)
+project(semihosting C ASM)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -21,12 +21,12 @@ set(CMAKE_ASM_FLAGS_DEBUG "-g3")
 set(CMAKE_C_FLAGS_DEBUG "-g3 -O0")
 
 set(CMAKE_ASM_FLAGS_RELEASE "")
-set(CMAKE_C_FLAGS_RELEASE "-O0")
+set(CMAKE_C_FLAGS_RELEASE "-O0 -DNDEBUG=1")
 
 add_link_options(-T${CMAKE_SOURCE_DIR}/stm32.ld)
 add_link_options(--specs=nosys.specs)
 
-add_executable(hello_arm.elf
+add_executable(semihosting.elf
         main.c
         startup.s
         stm32.ld)
